--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 html,
 body {
+  scroll-behavior: smooth;
   font-family: "Inter", sans-serif;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer base {
+  body {
+    @apply bg-white dark:bg-black
+    text-black dark:text-white
+    transition-colors;
   }
-  /* body {
-    color: white; 
-     background: black;
-  } */
+}
+
+::-webkit-scrollbar {
+  @apply w-2;
+}
+
+::-webkit-scrollbar-track {
+  @apply transition-colors;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-zinc-300 dark:bg-zinc-600
+  rounded;
+}
+
+.card-glass {
+  backdrop-filter: blur(20px) saturate(100%);
+  -webkit-backdrop-filter: blur(20px) saturate(100%);
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.link {
+  @apply hover:text-primary-500 dark:hover:bg-primary-200 transition-colors;
 }
