--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 
-/* @tailwind base; */
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -10,13 +10,11 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-
-  body {
-    @apply bg-white dark:bg-black
+body {
+  @apply bg-white dark:bg-black
     text-black dark:text-white
     transition-colors;
-  }
-
+}
 
 ::-webkit-scrollbar {
   @apply w-2;
@@ -38,5 +36,5 @@ body {
 }
 
 .link {
-  @apply hover:text-primary-500 dark:hover:bg-primary-200 transition-colors;
+  @apply hover:text-primary-500 dark:hover:text-primary-200 transition-colors;
 }
